force-app/main/default/objects/Issue__c/Issue__c.object-meta.xml
<CustomObject>
    <description>Project Issues</description>
    <label>Issue</label>
    <nameField>
        <displayFormat>PI-{000}</displayFormat>
        <label>Issue ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>