force-app/main/default/objects/Issue__c/fields/Detailed_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Requirement__c</fullName>
    <description>Detailed Requirement related to the Issue</description>
    <inlineHelpText>Please lookup or enter the requirement this issue is related to.</inlineHelpText>
    <label>Detailed Requirement</label>
    <referenceTo>Requirement__c</referenceTo>
    <relationshipLabel>Issues</relationshipLabel>
    <relationshipName>Issues</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>