force-app/main/default/objects/Issue__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>The date for intended resolution of the issue.</description>
    <inlineHelpText>Please enter a valid date for the resolution of this issue.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>