force-app/main/default/objects/Issue__c/fields/Issue_Detail__c.field-meta.xml
<CustomField>
    <fullName>Issue_Detail__c</fullName>
    <description>Full description of the issue.</description>
    <inlineHelpText>Please describe the issue, as completely as possible.</inlineHelpText>
    <label>Issue Detail</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>