force-app/main/default/objects/Issue__c/fields/Issue_Level__c.field-meta.xml
<CustomField>
    <fullName>Issue_Level__c</fullName>
    <description>The severity of the issue.</description>
    <inlineHelpText>Please select a level of severity to describe the issue.</inlineHelpText>
    <label>Issue Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Critical/Showstopper</fullName>
                <color>#FF0000</color>
                <label>1 - Critical/Showstopper</label>
            </value>
            <value>
                <fullName>2 - Major</fullName>
                <color>#FF6666</color>
                <label>2 - Major</label>
            </value>
            <value>
                <fullName>3 - Medium</fullName>
                <color>#FF6600</color>
                <label>3 - Medium</label>
            </value>
            <value>
                <fullName>4 - Minor</fullName>
                <color>#FFCC33</color>
                <label>4 - Minor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>