force-app/main/default/objects/Issue__c/fields/Issue_Name__c.field-meta.xml
<CustomField>
    <fullName>Issue_Name__c</fullName>
    <description>The descriptive name of the issue</description>
    <inlineHelpText>Please enter a descriptive name for issue.</inlineHelpText>
    <label>Issue Name</label>
    <length>254</length>
    <required>true</required>
    <type>Text</type>
</CustomField>