force-app/main/default/objects/Issue__c/fields/Issue_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Issue_Resolution__c</fullName>
    <description>The intended outcome to resolve the issue.</description>
    <inlineHelpText>Enter any notes indicating the direction(s) taken to resolve the issue. Each entry should have a date and name included (i.e. 1Jan2012 BSmith: [resolution notes])</inlineHelpText>
    <label>Issue Resolution</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>