force-app/main/default/objects/Issue__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The manager of the issue</description>
    <inlineHelpText>This field will be set automatically based on the status of the issue. Please do not change this setting, as the system will control its assignment.</inlineHelpText>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Issues</relationshipName>
    <type>Lookup</type>
</CustomField>