force-app/main/default/objects/Issue__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>The status of the issue.</description>
    <inlineHelpText>Please select an appropriate status for the issue.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Open/New</fullName>
                <default>true</default>
                <label>1 - Open/New</label>
            </value>
            <value>
                <fullName>2 - Pending</fullName>
            </value>
            <value>
                <fullName>3 - Validate / Deployed</fullName>
            </value>
            <value>
                <fullName>4 - Fixed / Closed</fullName>
            </value>
            <value>
                <fullName>5 - Cancelled</fullName>
            </value>
            <value>
                <fullName>6 - Deferred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>