force-app/main/default/objects/Issue__c/validationRules/Due_Date_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Due_Date_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  NOT(ISPICKVAL( Status__c , &quot;1 - Open/New&quot;)) ,  ISBLANK(Due_Date__c) )</errorConditionFormula>
    <errorDisplayField>Due_Date__c</errorDisplayField>
    <errorMessage>Please Enter a valid Due Date</errorMessage>
</ValidationRule>