force-app/main/default/objects/Issue__c/validationRules/Issue_Resolution_Must_Be_Filled_Out.validationRule-meta.xml
<ValidationRule>
    <fullName>Issue_Resolution_Must_Be_Filled_Out</fullName>
    <active>true</active>
    <description>Requires detail on resolution if status changes to Closed/Fix, Cancelled or Deferred</description>
    <errorConditionFormula>AND( (ISPICKVAL(  Status__c  , &quot;4 - Fixed / Closed&quot;)) ,  ISBLANK( Issue_Resolution__c ))</errorConditionFormula>
    <errorDisplayField>Issue_Resolution__c</errorDisplayField>
    <errorMessage>Must fill in Issue Resolution details before selecting this status</errorMessage>
</ValidationRule>